Initial setup for GitHub Pages deployment

--- a/work/index.html
+++ b/work/index.html
@@ -1,57 +1,111 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Work — Deliberate UX</title>
-  <meta name="description" content="Selected work and approach." />
-
-  <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="/assets/favicon.svg" />
   <link rel="stylesheet" href="/styles.css" />
   <script defer src="/app.js"></script>
 </head>
 
-<body class="page-work">
-  <header class="site-header">
-	<nav class="nav">
-	  <div class="nav-inner">
-		<a class="nav-brand" href="/">Deliberate UX</a>
-		<ul class="nav-links">
-		  <li><a href="/#work">Work</a></li>
-		  <li><a href="/#writing">Writing</a></li>
-		  <li><a href="/#about">About</a></li>
-		</ul>
-	  </div>
-	</nav>
-  </header>
+<body>
+  <main class="page">
+	<div class="container">
+	  <section class="section panel">
+		<div class="section-head">
+		  <div>
+			<h2 class="section-title">Selected work</h2>
+			<p class="section-kicker">Case studies and practice notes on enterprise UX, design systems, and adoption.</p>
+		  </div>
+		</div>
 
-  <main class="work-wrap">
-	<div class="work-paper">
-	  <h1 style="margin:0 0 10px 0; font-size: clamp(30px, 3.4vw, 44px); letter-spacing:-0.03em;">Work</h1>
-	  <p class="lede" style="margin:0 0 18px 0;">
-		A landing page for case studies / project write-ups. Keep this as your expandable container.
-	  </p>
+		<div class="cards" style="grid-template-columns: 1fr;">
+		  <div class="card" style="cursor: default; opacity: 0.6;">
+			<h3 class="card-title">Enterprise UX at scale</h3>
+			<p class="card-body">Design systems, agent workflows, and real-world constraints in large organizations.</p>
+			<span class="card-cta" style="opacity: 0.5;">Coming soon</span>
+		  </div>
 
-	  <div class="callout" style="margin-top:0;">
-		Next: add 3–6 work items with the same card language + tight narratives (problem → constraints → decision).
-	  </div>
+		  <div class="card" style="cursor: default; opacity: 0.6;">
+			<h3 class="card-title">Fixing invisible friction</h3>
+			<p class="card-body">Case studies on identifying and resolving adoption barriers that don't show up in usability tests.</p>
+			<span class="card-cta" style="opacity: 0.5;">Coming soon</span>
+		  </div>
 
-	  <!-- Back link down below, aligned left -->
-	  <div style="margin-top: 28px;">
-		<a class="backlink" href="/#work"><span class="larr">←</span> Back to home</a>
-	  </div>
+		  <div class="card" style="cursor: default; opacity: 0.6;">
+			<h3 class="card-title">Intentional product decisions</h3>
+			<p class="card-body">What to build, what not to build, and how to make the call when everyone has an opinion.</p>
+			<span class="card-cta" style="opacity: 0.5;">Coming soon</span>
+		  </div>
+		</div>
+	  </section>
+
+	  <!-- Full list with thumbnails -->
+	  <section class="section panel panel-soft">
+		<div class="section-head">
+		  <div>
+			<h2 class="section-title">Additional projects</h2>
+			<p class="section-kicker">More work and explorations</p>
+		  </div>
+		</div>
+
+		<div class="work-list">
+		  <article class="work-item" data-modal="enterprise-ux">
+			<div class="work-item-thumb">
+			  <div class="work-thumb-placeholder"></div>
+			</div>
+			<div class="work-item-content">
+			  <h3 class="work-item-title">Design system evolution</h3>
+			  <p class="work-item-excerpt">Building scalable component libraries for enterprise teams with competing priorities.</p>
+			  <div class="work-item-meta">
+				<span class="work-item-tag">Design Systems</span>
+				<span class="work-item-tag">Enterprise</span>
+			  </div>
+			</div>
+		  </article>
+
+		  <article class="work-item" data-modal="adoption-metrics">
+			<div class="work-item-thumb">
+			  <div class="work-thumb-placeholder"></div>
+			</div>
+			<div class="work-item-content">
+			  <h3 class="work-item-title">Adoption metrics that matter</h3>
+			  <p class="work-item-excerpt">Moving beyond vanity metrics to measure what actually drives product success.</p>
+			  <div class="work-item-meta">
+				<span class="work-item-tag">Product Strategy</span>
+				<span class="work-item-tag">Analytics</span>
+			  </div>
+			</div>
+		  </article>
+
+		  <article class="work-item" data-modal="workflow-design">
+			<div class="work-item-thumb">
+			  <div class="work-thumb-placeholder"></div>
+			</div>
+			<div class="work-item-content">
+			  <h3 class="work-item-title">Workflow design for agents</h3>
+			  <p class="work-item-excerpt">Designing interfaces for complex, multi-step processes in high-stakes environments.</p>
+			  <div class="work-item-meta">
+				<span class="work-item-tag">Workflow</span>
+				<span class="work-item-tag">Enterprise UX</span>
+			  </div>
+			</div>
+		  </article>
+		</div>
+	  </section>
+
+	  <section class="section panel">
+		<div class="about-panel">
+		  <h2 class="section-title" style="margin:0 0 6px;">In the meantime</h2>
+		  <p class="kicker">While I'm building out these case studies, check out my writing.</p>
+		  <p>
+			I write about practical UX: the incentives, operations, and constraints that shape outcomes.
+			<a href="/writing/writing.html">Read the essays →</a>
+		  </p>
+		</div>
+	  </section>
 	</div>
   </main>
-
-  <footer class="site-footer">
-	<div class="footer-inner">
-	  <div class="footer-mark" aria-hidden="true"></div>
-	  <div>
-		<p class="footer-title">Deliberate UX</p>
-		<p class="footer-sub">Systems, adoption, and decisions you can maintain.</p>
-		<p class="footer-meta">© 2026 · <a href="/">Home</a></p>
-	  </div>
-	</div>
-  </footer>
 </body>
 </html>
