--- a/index.html
+++ b/index.html
@@ -1,121 +1,96 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Deliberate UX — Design with intent</title>
-  <meta name="description" content="Deliberate UX: design systems, adoption, and durable product decisions." />
-
-  <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="/assets/favicon.svg" />
   <link rel="stylesheet" href="/styles.css" />
-  <script defer src="/app.js"></script>
 </head>
-
 <body>
-  <header class="site-header">
-	<nav class="nav">
-	  <div class="nav-inner">
-		<a class="nav-brand" href="/">Deliberate UX</a>
-		<ul class="nav-links">
-		  <li><a href="#work">Work</a></li>
-		  <li><a href="#writing">Writing</a></li>
-		  <li><a href="#about">About</a></li>
-		</ul>
-	  </div>
-	</nav>
-  </header>
+  <main class="page">
+	<div class="container">
 
-  <!-- HERO -->
-  <section class="hero" aria-label="Hero">
-	<div class="hero-media" aria-hidden="true"></div>
+	  <section class="hero">
+		<div class="hero-media">
+		  <img src="/assets/hero-aurora.jpeg" alt="" />
+		  <div class="hero-content">
+			<h1 class="hero-title">Design with intent.</h1>
+			<p class="hero-subtitle">I help teams build clear, humane, and durable product experiences.</p>
+			<div class="hero-chips">
+			  <span class="chip">Clarity over complexity</span>
+			  <span class="chip">Systems that ship</span>
+			  <span class="chip">Outcomes you can maintain</span>
+			</div>
+		  </div>
+		</div>
+	  </section>
 
-	<div class="hero-content">
-	  <h1>Design with intent.</h1>
-	  <p>I help teams build clear, humane, and durable product experiences.</p>
+	  <!-- WRITING -->
+	  <section id="writing" class="section panel panel--writing">
+		<div class="section-head">
+		  <div>
+			<h2 class="section-title">Writing</h2>
+			<p class="section-kicker">Essays on adoption, systems, and practical UX.</p>
+		  </div>
+		  <a class="card-cta-link" href="/writing/writing.html">More writing →</a>
+		</div>
 
-	  <!-- Pills MUST use .hero-pills and .pill -->
-	  <div class="hero-pills" role="list" aria-label="Positioning">
-		<span class="pill" role="listitem">Clarity over complexity</span>
-		<span class="pill" role="listitem">Systems that ship</span>
-		<span class="pill" role="listitem">Outcomes you can maintain</span>
-	  </div>
+		<div class="writing-panel">
+		  <ol class="writing-list">
+			<li><a href="/writing/why-good-ux-still-fails.html">Why good UX still fails</a></li>
+			<li><a href="/writing/the-stove-problem-revisited.html">The stove problem, revisited</a></li>
+			<li><a href="/writing/adoption-is-a-design-problem.html">Adoption is a design problem</a></li>
+		  </ol>
+		</div>
+	  </section>
+
+	  <!-- WORK -->
+	  <section id="work" class="section panel panel--work">
+		<div class="section-head">
+		  <div>
+			<h2 class="section-title">Selected work</h2>
+			<p class="section-kicker">Case studies and practice notes.</p>
+		  </div>
+		  <a class="card-cta-link" href="/work/">More work →</a>
+		</div>
+
+		<div class="cards">
+		  <a class="card" href="/work/">
+			<h3 class="card-title">Enterprise UX at scale</h3>
+			<p class="card-body">Design systems, agent workflows, and real-world constraints.</p>
+			<span class="card-cta">Explore <span class="arrow">→</span></span>
+		  </a>
+
+		  <a class="card" href="/writing/why-good-ux-still-fails.html">
+			<h3 class="card-title">Fixing invisible friction</h3>
+			<p class="card-body">Where adoption fails quietly — and how to see it.</p>
+			<span class="card-cta">Explore <span class="arrow">→</span></span>
+		  </a>
+
+		  <a class="card" href="/writing/adoption-is-a-design-problem.html">
+			<h3 class="card-title">Intentional product decisions</h3>
+			<p class="card-body">What to build, what not to build, and why.</p>
+			<span class="card-cta">Explore <span class="arrow">→</span></span>
+		  </a>
+		</div>
+	  </section>
+
+	  <!-- ABOUT -->
+	  <section id="about" class="section panel panel--about">
+		<div class="about-panel">
+		  <h2 class="section-title" style="margin:0 0 6px;">About</h2>
+		  <p class="kicker">Practical UX: incentives, operations, and constraints that shape outcomes.</p>
+		  <p>
+			I write about practical UX: the incentives, operations, and constraints that shape outcomes.
+			If your product is “usable” but still not adopted, that’s the gap I’m interested in.
+		  </p>
+		</div>
+	  </section>
+
 	</div>
-  </section>
-
-  <main class="content">
-	<!-- WORK -->
-	<section id="work" class="section">
-	  <div class="section-head">
-		<h2>Selected work</h2>
-		<a class="section-cta" href="/work/">More work →</a>
-	  </div>
-
-	  <div class="card-grid">
-		<div class="card">
-		  <a class="card-link" href="/work/">
-			<div class="card-blob" aria-hidden="true"></div>
-			<div class="card-inner">
-			  <h3>Enterprise UX at scale</h3>
-			  <p>Design systems, agent workflows, and real-world constraints.</p>
-			  <span class="card-cta">Explore <span class="arrow">→</span></span>
-			</div>
-		  </a>
-		</div>
-
-		<div class="card">
-		  <a class="card-link" href="/work/">
-			<div class="card-blob" aria-hidden="true"></div>
-			<div class="card-inner">
-			  <h3>Fixing invisible friction</h3>
-			  <p>Where adoption fails quietly — and how to see it.</p>
-			  <span class="card-cta">Explore <span class="arrow">→</span></span>
-			</div>
-		  </a>
-		</div>
-
-		<div class="card">
-		  <a class="card-link" href="/work/">
-			<div class="card-blob" aria-hidden="true"></div>
-			<div class="card-inner">
-			  <h3>Intentional product decisions</h3>
-			  <p>What to build, what not to build, and why.</p>
-			  <span class="card-cta">Explore <span class="arrow">→</span></span>
-			</div>
-		  </a>
-		</div>
-	  </div>
-	</section>
-
-	<!-- WRITING -->
-	<section id="writing" class="section">
-	  <h2>Writing</h2>
-	  <p class="section-sub">Essays on adoption, systems, and practical UX.</p>
-	  <ul class="writing-list">
-		<li><a class="writing-link" href="/writing/why-good-ux-still-fails.html">Why good UX still fails</a></li>
-		<li><a class="writing-link" href="/writing/the-stove-problem-revisited.html">The stove problem, revisited</a></li>
-		<li><a class="writing-link" href="/writing/adoption-is-a-design-problem.html">Adoption is a design problem</a></li>
-	  </ul>
-	</section>
-
-	<!-- ABOUT -->
-	<section id="about" class="section">
-	  <h2>About</h2>
-	  <p class="lede">
-		I’ve spent years inside complex organizations designing systems that have to survive reality — not just screenshots.
-		I focus on incentives, operations, and time: the forces that decide whether good UX actually lands.
-	  </p>
-	</section>
   </main>
 
-  <footer class="site-footer">
-	<div class="footer-inner">
-	  <div class="footer-mark" aria-hidden="true"></div>
-	  <div>
-		<p class="footer-title">Deliberate UX</p>
-		<p class="footer-sub">Design systems, adoption mechanics, and product decisions that hold up under real constraints.</p>
-		<p class="footer-meta">© 2026 · <a href="#about">Contact</a></p>
-	  </div>
-	</div>
-  </footer>
+  <script src="/app.js" defer></script>
 </body>
 </html>
