--- a/writing/why-good-ux-still-fails.html
+++ b/writing/why-good-ux-still-fails.html
@@ -1,70 +1,96 @@
+<!-- /writing/why-good-ux-still-fails.html -->
 <!doctype html>
 <html lang="en" data-article-id="why-good-ux-still-fails">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Why good UX still fails — Deliberate UX</title>
-  <meta name="description" content="Great interaction design can still lose to incentives, operations, and time." />
+  <head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
-  <link rel="stylesheet" href="/styles.css" />
-  <script defer src="/app.js"></script>
-</head>
+	<title>Why good UX still fails — Deliberate UX</title>
+	<meta
+	  name="description"
+	  content="Great interaction design can still lose to incentives, operations, and time. Most product “UX failures” are system failures."
+	/>
 
-<body class="page-article">
-  <header class="site-header">
-	<nav class="nav">
-	  <div class="nav-inner">
-		<a class="nav-brand" href="/">Deliberate UX</a>
-		<ul class="nav-links">
-		  <li><a href="/#work">Work</a></li>
-		  <li><a href="/#writing">Writing</a></li>
-		  <li><a href="/#about">About</a></li>
-		</ul>
-	  </div>
-	</nav>
-  </header>
+	<!-- Manager / metadata hooks -->
+	<meta name="dux:type" content="article" />
+	<meta name="dux:slug" content="why-good-ux-still-fails" />
+	<meta name="dux:title" content="Why good UX still fails" />
+	<meta
+	  name="dux:deck"
+	  content="Great interaction design can still lose to incentives, operations, and time. Most product “UX failures” are system failures."
+	/>
+	<meta name="dux:readtime" content="8–10 minute read" />
+	<meta name="dux:updated" content="2026" />
+	<meta name="dux:status" content="published" />
+	<meta name="dux:tags" content="adoption,systems,incentives,operations,time" />
 
-  <main class="article-wrap">
-	<article class="paper">
-	  <div class="article-top">
-		<div class="meta-left"></div>
-		<div class="meta-right">
-		  <div>Updated</div>
-		  <div class="updated">2026</div>
+	<link rel="icon" href="../assets/favicon.svg" type="image/svg+xml" />
+	<link rel="stylesheet" href="../styles.css" />
+	<script defer src="../app.js"></script>
+  </head>
+
+  <body class="page page-article" data-article-id="why-good-ux-still-fails">
+	<main class="article-wrap">
+	  <article class="paper" data-paper="article">
+		<div class="article-top">
+		  <div class="meta-left">
+			<div class="readtime">8–10 minute read</div>
+		  </div>
+
+		  <div class="meta-right">
+			<div class="meta-kicker">Updated</div>
+			<div class="updated">2026</div>
+		  </div>
 		</div>
-	  </div>
 
-	  <div class="readtime">8–10 minute read</div>
-	  <h1 class="article-title">Why good UX still fails</h1>
-	  <p class="article-dek">Great interaction design can still lose to incentives, operations, and time. Most product “UX failures” are system failures.</p>
+		<header class="article-head">
+		  <h1 class="article-title">Why good UX still fails</h1>
+		  <p class="article-deck">
+			Great interaction design can still lose to incentives, operations, and time. Most product
+			“UX failures” are system failures.
+		  </p>
+		</header>
 
-	  <div class="callout">When adoption fails, the UI gets blamed — but the system decides.</div>
+		<div class="callout">
+		  When adoption fails, the UI gets blamed — but the system decides.
+		</div>
 
-	  <div class="article-body">
-		<h2>The three layers UX can’t out-design</h2>
+		<div class="article-body">
+		  <h2>The three layers UX can’t out-design</h2>
 
-		<h3>1) Incentives</h3>
-		<p>If leadership celebrates speed-to-launch, teams optimize for shipping, not learning. If sales promises “one-click magic,” the product absorbs complexity until it breaks.</p>
+		  <h3>1) Incentives</h3>
+		  <p>
+			If leadership celebrates speed-to-launch, teams optimize for shipping, not learning. If sales promises
+			“one-click magic,” the product absorbs complexity until it breaks.
+		  </p>
 
-		<h3>2) Operations</h3>
-		<p>UX fails when the operational reality isn’t designed. Workarounds become the real interface.</p>
+		  <h3>2) Operations</h3>
+		  <p>
+			UX fails when the operational reality isn’t designed. Workarounds become the real interface.
+		  </p>
 
-		<h3>3) Time</h3>
-		<p>Time is the universal constraint. If your tool asks for time people don’t have, they’ll rationally decline — even if it’s “better.”</p>
-	  </div>
-	</article>
-  </main>
+		  <h3>3) Time</h3>
+		  <p>
+			Time is the universal constraint. If your tool asks for time people don’t have, they’ll rationally decline —
+			even if it’s “better.”
+		  </p>
+		</div>
 
-  <footer class="site-footer">
-	<div class="footer-inner">
-	  <div class="footer-mark" aria-hidden="true"></div>
-	  <div>
-		<p class="footer-title">Deliberate UX</p>
-		<p class="footer-sub">This site is intentionally small. The structure is designed to scale to hundreds of articles.</p>
-		<p class="footer-meta">© 2026 · <a href="/#writing">More writing</a></p>
-	  </div>
-	</div>
-  </footer>
-</body>
+		<footer class="article-footer">
+		  <div class="site-mark">
+			<div class="site-mark-badge" aria-hidden="true"></div>
+			<div class="site-mark-text">
+			  <div class="site-mark-title">Deliberate UX</div>
+			  <div class="site-mark-subtitle">
+				This site is intentionally small. The structure is designed to scale to hundreds of articles.
+			  </div>
+			  <div class="site-mark-meta">
+				© 2026 · <a class="more-writing" href="../#writing">More writing</a>
+			  </div>
+			</div>
+		  </div>
+		</footer>
+	  </article>
+	</main>
+  </body>
 </html>
