--- a/work/index.html
+++ b/work/index.html
@@ -24,6 +24,7 @@
 		  <div class="work-card-image work-card-slideshow">
 			<img class="slide slide-1" src="/assets/work/technology-hero.png" alt="Enterprise orchestration console interface" />
 			<img class="slide slide-2" src="/assets/work/technology-2.png" alt="Account record page" />
+			<img class="slide slide-3" src="/assets/work/finance-hero.png" alt="Enterprise dashboard interface" />
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Technology</span>
@@ -34,9 +35,9 @@
 
 		<article class="work-card" data-case="telecom">
 		  <div class="work-card-image work-card-slideshow">
-			<img class="slide slide-1" src="/assets/work/telecom-hero.png" alt="Omnichannel experience cloud home" />
-			<img class="slide slide-2" src="/assets/work/telecom-2.png" alt="Experience cloud cases" />
-			<img class="slide slide-3" src="/assets/work/telecom-3.png" alt="Experience cloud knowledge" />
+			<img class="slide slide-1" src="/assets/work/telecom-hero.png" alt="Omnichannel experience cloud home" style="--zoom: 2.5; object-position: 80px 75%;" />
+			<img class="slide slide-2" src="/assets/work/telecom-2.png" alt="Experience cloud cases" style="--zoom: 2.5; object-position: 80px 75%;" />
+			<img class="slide slide-3" src="/assets/work/telecom-3.png" alt="Experience cloud knowledge" style="--zoom: 2.5; object-position: 80px 75%;" />
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Finserv</span>
@@ -45,33 +46,33 @@
 		  </div>
 		</article>
 
-		<article class="work-card" data-case="finance">
-		  <div class="work-card-image work-card-slideshow">
-			<img class="slide slide-1" src="/assets/work/finance-hero.png" alt="Enterprise dashboard default view" />
-			<img class="slide slide-2" src="/assets/work/finance-2.png" alt="Enterprise dashboard chart view" />
+		<article class="work-card" data-case="nike">
+		  <div class="work-card-image">
+			<img src="/assets/work/NikeEmailLibrary_Overlay_v2-0_0006_05_Click_Overlay.png" alt="Nike Email Library click overlay interface" style="--zoom: 2.2; object-position: 70% 30%;" />
 		  </div>
 		  <div class="work-card-content">
-			<span class="work-card-tag">Finance</span>
-			<h2 class="work-card-title">Enterprise Rebrand</h2>
-			<p class="work-card-excerpt">Design system evolution during organizational transformation.</p>
+			<span class="work-card-tag">Retail</span>
+			<h2 class="work-card-title">Email Analytics Platform</h2>
+			<p class="work-card-excerpt">Click overlay analytics for global email campaigns.</p>
 		  </div>
 		</article>
 
 		<article class="work-card" data-case="fintech">
 		  <div class="work-card-image work-card-slideshow">
-			<img class="slide slide-1" src="/assets/work/fintech-hero.png" alt="Telecom platform bookings interface" />
-			<img class="slide slide-2" src="/assets/work/fintech-2.png" alt="Card component design" />
+			<img class="slide slide-1" src="/assets/work/Account Record Page - CS trailblazers.png" alt="Account engagement dashboard with campaign metrics" style="--zoom: 4.5; object-position: right calc(100% - 30px);" />
+			<img class="slide slide-2" src="/assets/work/Real Time 01.png" alt="Opportunity record with Einstein Coach" style="--zoom: 4.5; object-position: right calc(100% - 30px);" />
+			<img class="slide slide-3" src="/assets/work/Account Record Page - CS Seahawks.png" alt="Account health scores and renewal likelihood" style="--zoom: 4.5; object-position: right calc(100% - 30px);" />
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Telecom</span>
-			<h2 class="work-card-title">Dual Platform Integration</h2>
-			<p class="work-card-excerpt">Merging two telecom products into one coherent experience.</p>
+			<h2 class="work-card-title">AI-Powered Revenue Intelligence</h2>
+			<p class="work-card-excerpt">Future-state vision for intelligent marketing-to-sales handoff and autonomous renewals.</p>
 		  </div>
 		</article>
 
 		<article class="work-card" data-case="retail">
 		  <div class="work-card-image">
-			<img src="/assets/work/retail-hero.png" alt="Retail BOPIS transaction interface" />
+			<img src="/assets/work/retail-hero.png" alt="Retail BOPIS transaction interface" style="--zoom: 2.2; object-position: center 95%;" />
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Retail / Telecom</span>
@@ -143,30 +144,30 @@
 	</div>
   </div>
 
-  <div class="case-modal-overlay" id="modal-finance">
+  <div class="case-modal-overlay" id="modal-nike">
 	<div class="case-modal">
 	  <button class="case-modal-close" aria-label="Close">×</button>
 	  <div class="case-modal-hero">
-		<img src="/assets/work/finance-hero.png" alt="Enterprise dashboard and analytics" />
+		<img src="/assets/work/NikeEmailLibrary_Overlay_v2-0_0006_05_Click_Overlay.png" alt="Nike Email Library click overlay interface" />
 	  </div>
 	  <div class="case-modal-body">
-		<span class="case-modal-tag">Finance</span>
-		<h1 class="case-modal-title">Enterprise Rebrand</h1>
+		<span class="case-modal-tag">Retail</span>
+		<h1 class="case-modal-title">Email Analytics Platform</h1>
 
 		<section class="case-section">
 		  <h2>Problem</h2>
-		  <p>Major organizational rebrand requiring systematic evolution of design system across 50+ applications. Inconsistent implementation risked brand fragmentation and technical debt.</p>
+		  <p>Global marketing teams lacked visibility into email campaign performance across regions. No centralized way to browse historical campaigns, compare engagement patterns, or understand what drove clicks.</p>
 		</section>
 
 		<section class="case-section">
 		  <h2>Solution</h2>
-		  <p>Led design system migration strategy with versioned component library. Created adoption playbooks and governance framework to ensure consistent implementation across teams.</p>
-		  <p>Designed transition patterns allowing gradual migration without disrupting active development or user workflows.</p>
+		  <p>Designed a searchable email library with click overlay analytics. Teams could browse campaigns by region, date, and category, then view heat-mapped click data directly on rendered emails.</p>
+		  <p>Built filtering and comparison tools to surface top-performing templates and identify engagement patterns across campaign types.</p>
 		</section>
 
 		<section class="case-section">
 		  <h2>Outcome</h2>
-		  <p>Successfully migrated 50+ applications to new brand within 18 months. Zero production incidents during transition. Design system adoption reached 94% across organization.</p>
+		  <p>Centralized visibility across global campaigns. Reduced time to find reference emails from hours to seconds. Enabled data-driven template decisions based on actual click behavior.</p>
 		</section>
 	  </div>
 	</div>
@@ -176,26 +177,27 @@
 	<div class="case-modal">
 	  <button class="case-modal-close" aria-label="Close">×</button>
 	  <div class="case-modal-hero">
-		<img src="/assets/work/fintech-hero.png" alt="Fintech platform bookings interface" />
+		<img src="/assets/work/Account Record Page - CS trailblazers.png" alt="Account engagement dashboard" style="object-position: center calc(50% - 60px);" />
 	  </div>
 	  <div class="case-modal-body">
 		<span class="case-modal-tag">Telecom</span>
-		<h1 class="case-modal-title">Dual Platform Integration</h1>
+		<h1 class="case-modal-title">AI-Powered Revenue Intelligence</h1>
 
 		<section class="case-section">
-		  <h2>Problem</h2>
-		  <p>Post-acquisition integration of two telecom products with overlapping functionality but distinct user bases. Risk of alienating either customer segment during consolidation.</p>
+		  <h2>Challenge</h2>
+		  <p>Marketing and sales teams operating in silos with no intelligent handoff. Campaign engagement data wasn't surfacing to sales in actionable ways, making it difficult to prioritize leads and time outreach effectively.</p>
+		  <p>Renewal conversations lacked context—CSMs and AEs had no unified view of account health, engagement signals, or AI-driven recommendations to guide strategic discussions.</p>
 		</section>
 
 		<section class="case-section">
-		  <h2>Solution</h2>
-		  <p>Conducted comparative analysis of both products to identify best-in-class patterns from each. Designed unified experience preserving familiar workflows while introducing improvements.</p>
-		  <p>Created migration path with opt-in preview periods allowing users to transition at their own pace.</p>
+		  <h2>Vision</h2>
+		  <p>Designed a future-state concept bridging marketing and sales through intelligent engagement scoring and prioritization. Campaign interactions flow directly into account records, with AI surfacing the most promising opportunities based on strategic importance.</p>
+		  <p>Introduced Einstein Coach for real-time AI guidance during renewal conversations—surfacing cross-sell opportunities, handling objection patterns, and recommending next best actions. For low-risk renewals, envisioned Agentforce autonomously generating quotes and capturing revenue through 1-click acceptance.</p>
 		</section>
 
 		<section class="case-section">
-		  <h2>Outcome</h2>
-		  <p>Successful platform consolidation with 92% user retention. Support tickets reduced 35% post-migration. Feature parity achieved 6 months ahead of schedule.</p>
+		  <h2>Impact</h2>
+		  <p>This vision work demonstrated how AI could transform the marketing-to-sales handoff and free skilled teams for strategic work. The concepts influenced roadmap discussions around autonomous revenue capture and intelligent account prioritization.</p>
 		</section>
 	  </div>
 	</div>
