--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card" href="/writing/why-good-ux-still-fails.html">
-			<h3 class="card-title">Fixing invisible friction</h3>
-			<p class="card-body">Where adoption fails quietly — and how to see it.</p>
+		  <a class="card" href="/work/">
+			<h3 class="card-title">Omnichannel platforms</h3>
+			<p class="card-body">Multi-channel service experiences for financial services and telecom.</p>
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card" href="/writing/adoption-is-a-design-problem.html">
-			<h3 class="card-title">Intentional product decisions</h3>
-			<p class="card-body">What to build, what not to build, and why.</p>
+		  <a class="card" href="/work/">
+			<h3 class="card-title">AI-powered workflows</h3>
+			<p class="card-body">Intelligent marketing-to-sales handoff and autonomous renewals.</p>
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
 		  </a>
 		</div>
