--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 		</div>
 
 		<div class="cards">
-		  <a class="card" href="/work/">
+		  <a class="card card--has-thumb" href="/work/" data-thumb="technology">
 			<h3 class="card-title">Enterprise UX at scale</h3>
 			<p class="card-body">Design systems, agent workflows, and real-world constraints.</p>
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card" href="/work/">
+		  <a class="card card--has-thumb" href="/work/" data-thumb="telecom">
 			<h3 class="card-title">Omnichannel platforms</h3>
 			<p class="card-body">Multi-channel service experiences for financial services and telecom.</p>
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card" href="/work/">
+		  <a class="card card--has-thumb" href="/work/" data-thumb="fintech">
 			<h3 class="card-title">AI-powered workflows</h3>
 			<p class="card-body">Intelligent marketing-to-sales handoff and autonomous renewals.</p>
 			<span class="card-cta">Explore <span class="arrow">→</span></span>
