--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 
 	  <!-- WORK -->
 	  <section id="work" class="section panel panel--work">
+		<div class="work-backdrop">
+		  <img src="/assets/work/finance-hero.png" alt="" />
+		  <div class="work-backdrop-moire"></div>
+		  <div class="work-backdrop-fade"></div>
+		</div>
 		<div class="section-head">
 		  <div>
 			<a href="/work/" class="section-title-link"><h2 class="section-title">Selected work</h2></a>
