--- a/work/index.html
+++ b/work/index.html
@@ -14,8 +14,15 @@
 	<div class="container">
 	  <!-- Hero section for Work page -->
 	  <section class="work-hero">
-		<h1 class="work-hero-title">Selected work</h1>
-		<p class="work-hero-subtitle">Case studies on enterprise UX, design systems, and adoption at scale.</p>
+		<div class="work-hero-monitor">
+		  <img src="/assets/work/technology-hero.png" alt="" />
+		  <div class="work-hero-moire"></div>
+		  <div class="work-hero-fade"></div>
+		</div>
+		<div class="work-hero-text">
+		  <h1 class="work-hero-title">Selected work</h1>
+		  <p class="work-hero-subtitle">Case studies on enterprise UX, design systems, and adoption at scale.</p>
+		</div>
 	  </section>
 
 	  <!-- Case study cards grid -->
