--- a/index.html
+++ b/index.html
@@ -66,26 +66,26 @@
 	  <section id="writing" class="section panel panel--writing">
 		<div class="section-head">
 		  <div>
-			<a href="/writing/writing.html" class="section-title-link"><h2 class="section-title">Writing</h2></a>
+			<a href="/work/writing/" class="section-title-link"><h2 class="section-title">Writing</h2></a>
 			<p class="section-kicker">Essays on adoption, systems, and practical UX.</p>
 		  </div>
-		  <a class="card-cta-link" href="/writing/writing.html">More writing →</a>
+		  <a class="card-cta-link" href="/work/writing/">More writing →</a>
 		</div>
 
 		<div class="writing-cards">
-		  <a class="card card--writing" href="/writing/why-good-ux-still-fails.html">
+		  <a class="card card--writing" href="/work/writing/why-good-ux-still-fails.html">
 			<h3 class="card-title">Why good UX still fails</h3>
 			<p class="card-body">Great interaction design can still lose to incentives, operations, and time.</p>
 			<span class="card-cta">Read <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card card--writing" href="/writing/the-stove-problem-revisited.html">
+		  <a class="card card--writing" href="/work/writing/the-stove-problem-revisited.html">
 			<h3 class="card-title">The stove problem, revisited</h3>
 			<p class="card-body">When "better design" loses to learned behavior and environment.</p>
 			<span class="card-cta">Read <span class="arrow">→</span></span>
 		  </a>
 
-		  <a class="card card--writing" href="/writing/adoption-is-a-design-problem.html">
+		  <a class="card card--writing" href="/work/writing/adoption-is-a-design-problem.html">
 			<h3 class="card-title">Adoption is a design problem</h3>
 			<p class="card-body">Time, trust, risk, switching costs — and fit.</p>
 			<span class="card-cta">Read <span class="arrow">→</span></span>
@@ -100,8 +100,43 @@
 		  <p class="kicker">Practical UX: incentives, operations, and constraints that shape outcomes.</p>
 		  <p>
 			I write about practical UX: the incentives, operations, and constraints that shape outcomes.
-			If your product is “usable” but still not adopted, that’s the gap I’m interested in.
+			If your product is "usable" but still not adopted, that's the gap I'm interested in.
 		  </p>
+		</div>
+		<div class="about-illustration">
+		  <svg class="design-flowchart" viewBox="0 0 600 115" preserveAspectRatio="xMidYMid meet">
+			<defs>
+			  <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+				<polygon points="0 0, 10 3.5, 0 7" fill="rgba(255,255,255,0.35)" />
+			  </marker>
+			</defs>
+			<!-- Arrows -->
+			<path class="flow-arrow arrow-1" d="M82 42 L108 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-2" d="M192 42 L218 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-3" d="M310 42 L336 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-4" d="M428 42 L454 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<!-- Varied shapes with different colors -->
+			<g class="flow-node node-1">
+			  <circle cx="46" cy="42" r="36" fill="rgba(96, 165, 250, 0.2)" stroke="rgba(96, 165, 250, 0.6)" stroke-width="1.5" />
+			  <text x="46" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Research</text>
+			</g>
+			<g class="flow-node node-2">
+			  <polygon points="155,6 192,42 155,78 118,42" fill="rgba(52, 211, 153, 0.2)" stroke="rgba(52, 211, 153, 0.6)" stroke-width="1.5" />
+			  <text x="155" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Define</text>
+			</g>
+			<g class="flow-node node-3">
+			  <rect x="228" y="10" width="72" height="64" rx="10" fill="rgba(251, 191, 36, 0.2)" stroke="rgba(251, 191, 36, 0.6)" stroke-width="1.5" />
+			  <text x="264" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Ideate</text>
+			</g>
+			<g class="flow-node node-4">
+			  <polygon points="382,10 428,10 410,74 364,74" fill="rgba(244, 114, 182, 0.2)" stroke="rgba(244, 114, 182, 0.6)" stroke-width="1.5" />
+			  <text x="396" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Build</text>
+			</g>
+			<g class="flow-node node-5">
+			  <circle cx="518" cy="42" r="36" fill="rgba(168, 139, 250, 0.2)" stroke="rgba(168, 139, 250, 0.6)" stroke-width="1.5" />
+			  <text x="518" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Test</text>
+			</g>
+		  </svg>
 		</div>
 	  </section>
 
