--- a/work/index.html
+++ b/work/index.html
@@ -37,9 +37,9 @@
 
 		<article class="work-card" data-case="telecom">
 		  <div class="work-card-image work-card-slideshow">
-			<img class="slide slide-1" src="/assets/work/telecom-hero.png" alt="Omnichannel experience cloud home" style="--zoom: 2.5; object-position: 80px 75%;" />
-			<img class="slide slide-2" src="/assets/work/telecom-2.png" alt="Experience cloud cases" style="--zoom: 2.5; object-position: 80px 75%;" />
-			<img class="slide slide-3" src="/assets/work/telecom-3.png" alt="Experience cloud knowledge" style="--zoom: 2.5; object-position: 80px 75%;" />
+			<img class="slide slide-1" src="/assets/work/Experience Cloud Home-0.png" alt="Experience cloud home dashboard" style="--zoom: 2.5; object-position: center 85%;" />
+			<img class="slide slide-2" src="/assets/work/telecom-hero.png" alt="Omnichannel experience cloud" style="--zoom: 2.5; object-position: 80px 75%;" />
+			<img class="slide slide-3" src="/assets/work/telecom-2.png" alt="Experience cloud cases" style="--zoom: 2.5; object-position: 80px 75%;" />
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Finserv</span>
@@ -78,8 +78,8 @@
 		  </div>
 		  <div class="work-card-content">
 			<span class="work-card-tag">Retail / Telecom</span>
-			<h2 class="work-card-title">Retail Tech Platform</h2>
-			<p class="work-card-excerpt">Store operations and customer service tooling.</p>
+			<h2 class="work-card-title">Design System & Retail Platform</h2>
+			<p class="work-card-excerpt">Design system foundations and store operations tooling.</p>
 		  </div>
 		</article>
 	  </section>
