--- a/index.html
+++ b/index.html
@@ -104,37 +104,71 @@
 		  </p>
 		</div>
 		<div class="about-illustration">
-		  <svg class="design-flowchart" viewBox="0 0 600 115" preserveAspectRatio="xMidYMid meet">
+		  <svg class="design-flowchart" viewBox="0 0 620 115" preserveAspectRatio="xMidYMid meet">
 			<defs>
-			  <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
-				<polygon points="0 0, 10 3.5, 0 7" fill="rgba(255,255,255,0.35)" />
+			  <marker id="arrowhead" markerWidth="6" markerHeight="5" refX="5" refY="2.5" orient="auto">
+				<polygon points="0 0, 6 2.5, 0 5" fill="rgba(255,255,255,0.35)" />
 			  </marker>
+			  <!-- Clip paths -->
+			  <clipPath id="clip-1"><circle cx="46" cy="42" r="34"/></clipPath>
+			  <clipPath id="clip-2"><polygon points="168,8 203,42 168,76 133,42"/></clipPath>
+			  <clipPath id="clip-3"><rect x="260" y="12" width="68" height="60" rx="8"/></clipPath>
+			  <clipPath id="clip-4"><polygon points="412,12 454,12 436,72 394,72"/></clipPath>
+			  <clipPath id="clip-5"><circle cx="554" cy="42" r="34"/></clipPath>
 			</defs>
-			<!-- Arrows -->
-			<path class="flow-arrow arrow-1" d="M82 42 L108 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
-			<path class="flow-arrow arrow-2" d="M192 42 L218 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
-			<path class="flow-arrow arrow-3" d="M310 42 L336 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
-			<path class="flow-arrow arrow-4" d="M428 42 L454 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
-			<!-- Varied shapes with different colors -->
+			<!-- Arrows (evenly spaced) -->
+			<path class="flow-arrow arrow-1" d="M82 42 L126 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-2" d="M206 42 L252 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-3" d="M336 42 L384 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<path class="flow-arrow arrow-4" d="M464 42 L510 42" stroke="rgba(255,255,255,0.35)" stroke-width="2" fill="none" marker-end="url(#arrowhead)" />
+			<!-- Shapes (evenly spaced) -->
 			<g class="flow-node node-1">
 			  <circle cx="46" cy="42" r="36" fill="rgba(96, 165, 250, 0.2)" stroke="rgba(96, 165, 250, 0.6)" stroke-width="1.5" />
+			  <g clip-path="url(#clip-1)">
+				<g transform="translate(46,40)"><g class="flow-icon icon-1">
+				  <circle cx="-2" cy="-2" r="10" fill="rgba(255,255,255,0.4)" stroke="white" stroke-width="2.5"/>
+				  <line x1="5" y1="5" x2="14" y2="14" stroke="white" stroke-width="3" stroke-linecap="round"/>
+				</g></g>
+			  </g>
 			  <text x="46" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Research</text>
 			</g>
 			<g class="flow-node node-2">
-			  <polygon points="155,6 192,42 155,78 118,42" fill="rgba(52, 211, 153, 0.2)" stroke="rgba(52, 211, 153, 0.6)" stroke-width="1.5" />
-			  <text x="155" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Define</text>
+			  <polygon points="168,6 205,42 168,78 131,42" fill="rgba(52, 211, 153, 0.2)" stroke="rgba(52, 211, 153, 0.6)" stroke-width="1.5" />
+			  <g clip-path="url(#clip-2)">
+				<g transform="translate(168,42) rotate(-45)"><g class="flow-icon icon-2">
+				  <rect x="-3" y="-14" width="6" height="22" fill="rgba(255,255,255,0.4)" stroke="white" stroke-width="2"/>
+				  <polygon points="-3,8 3,8 0,14" fill="rgba(255,255,255,0.4)" stroke="white" stroke-width="2" stroke-linejoin="round"/>
+				</g></g>
+			  </g>
+			  <text x="168" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Define</text>
 			</g>
 			<g class="flow-node node-3">
-			  <rect x="228" y="10" width="72" height="64" rx="10" fill="rgba(251, 191, 36, 0.2)" stroke="rgba(251, 191, 36, 0.6)" stroke-width="1.5" />
-			  <text x="264" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Ideate</text>
+			  <rect x="258" y="10" width="72" height="64" rx="10" fill="rgba(251, 191, 36, 0.2)" stroke="rgba(251, 191, 36, 0.6)" stroke-width="1.5" />
+			  <g clip-path="url(#clip-3)">
+				<g transform="translate(294,40)"><g class="flow-icon icon-3">
+				  <path d="M0,-14 C-8,-14 -12,-6 -12,2 C-12,7 -8,11 -5,14 L5,14 C8,11 12,7 12,2 C12,-6 8,-14 0,-14 Z" fill="rgba(255,255,255,0.4)" stroke="white" stroke-width="2.5"/>
+				  <line x1="-4" y1="18" x2="4" y2="18" stroke="white" stroke-width="2" stroke-linecap="round"/>
+				</g></g>
+			  </g>
+			  <text x="294" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Ideate</text>
 			</g>
 			<g class="flow-node node-4">
-			  <polygon points="382,10 428,10 410,74 364,74" fill="rgba(244, 114, 182, 0.2)" stroke="rgba(244, 114, 182, 0.6)" stroke-width="1.5" />
-			  <text x="396" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Build</text>
+			  <polygon points="410,10 456,10 438,74 392,74" fill="rgba(244, 114, 182, 0.2)" stroke="rgba(244, 114, 182, 0.6)" stroke-width="1.5" />
+			  <g clip-path="url(#clip-4)">
+				<g transform="translate(424,42)"><g class="flow-icon icon-4">
+				  <path d="M-4,-14 L4,-14 L4,-4 L10,-4 C12,-2 12,2 10,4 L4,4 L4,14 L-4,14 L-4,4 L-10,4 C-12,2 -12,-2 -10,-4 L-4,-4 Z" fill="rgba(255,255,255,0.4)" stroke="white" stroke-width="2.5" stroke-linejoin="round"/>
+				</g></g>
+			  </g>
+			  <text x="424" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Build</text>
 			</g>
 			<g class="flow-node node-5">
-			  <circle cx="518" cy="42" r="36" fill="rgba(168, 139, 250, 0.2)" stroke="rgba(168, 139, 250, 0.6)" stroke-width="1.5" />
-			  <text x="518" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Test</text>
+			  <circle cx="554" cy="42" r="36" fill="rgba(168, 139, 250, 0.2)" stroke="rgba(168, 139, 250, 0.6)" stroke-width="1.5" />
+			  <g clip-path="url(#clip-5)">
+				<g transform="translate(554,42)"><g class="flow-icon icon-5">
+				  <path d="M-10,0 L-4,8 L12,-10" fill="none" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+				</g></g>
+			  </g>
+			  <text x="554" y="100" text-anchor="middle" fill="var(--muted)" font-size="12">Test</text>
 			</g>
 		  </svg>
 		</div>
